Fixed wrong gradle property assignment and weird proguard warnings